# greedysub

./: .coverage  .gitignore  CITATION.cff  README.md  greedyreduce.py  greedysub.py  setup.cfg
.github/workflows/: tests.yml
fil-result/2023-01-12T17-42-51_699/: index.html
fil-result/2023-01-12T17-46-41_864/: index.html
fil-result/2023-01-12T17-51-51_372/: index.html
fil-result/2023-01-12T17-53-57_938/: index.html
fil-result/2023-01-12T17-56-48_193/: index.html
fil-result/2023-01-12T17-57-30_830/: index.html
fil-result/2023-01-12T18-00-25_269/: index.html  peak-memory.prof
fil-result/2023-01-12T18-05-31_520/: index.html
fil-result/2023-01-12T18-07-15_525/: index.html  peak-memory.prof
fil-result/2023-01-12T18-10-57_084/: index.html
fil-result/2023-01-12T18-12-04_658/: index.html
fil-result/2023-01-12T18-16-00_061/: index.html
fil-result/2023-01-13T12-15-35_986/: index.html
fil-result/2023-01-13T12-16-37_664/: index.html
fil-result/2023-01-13T12-18-17_809/: index.html
fil-result/2023-01-13T12-19-15_186/: index.html
fil-result/2023-01-13T12-21-47_963/: index.html
fil-result/2023-01-13T12-27-05_157/: index.html  peak-memory.prof
tests/: Untitled.ipynb  conftest.py  hobohm_randdata.py  k  test.txt  test_greedyreduce.py  test_greedysub.py  tmp1.txt  tmp_memorytest.py  x  x2  y  y1  y2  y3  y4  yold  yold2  ys  ys2
tests/fil-result/2023-01-13T17-09-26_305/: index.html  peak-memory.prof
tests/fil-result/2023-01-13T17-19-06_840/: index.html  peak-memory.prof
tests/fil-result/2023-01-13T17-19-40_825/: index.html  peak-memory.prof
(+4 files in other folders)
