[metadata]
name = greedysub
version = 1.1.0
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = Reduce redundancy in dataset using greedy algorithms: 
			  select subset of data such that no retained items are close neighbors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/greedysub
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
py_modules = greedysub
python_requires = >=3.7

[options.entry_points]
console_scripts =
    greedysub = greedysub:main